# microscope

./: Cargo.toml  DESIGN_DOC.md  clippy.toml  rustfmt.toml
.cargo/: config.toml
.githooks/: README
current_tasks/: m0_foundation.txt  m1_vim_editing.txt  m1a_modal_editing.txt  m2_file_management.txt  m3_treesitter.txt  m4_lsp.txt  m5_git.txt  m6_polish.txt
ideas/: backlog.txt
ms-core/: Cargo.toml
ms-core/src/: history.rs  lib.rs  movement.rs  rope.rs  selection.rs  test.rs  transaction.rs
ms-event/: Cargo.toml
ms-event/src/: lib.rs
ms-git/: Cargo.toml
ms-git/src/: lib.rs
ms-lsp/: Cargo.toml
ms-lsp/src/: lib.rs
ms-term/: Cargo.toml
ms-term/src/: application.rs  commands.rs  compositor.rs  lib.rs  main.rs
ms-term/src/ui/: editor.rs  file_picker.rs  mod.rs  picker.rs  prompt.rs
ms-term/tests/: integration.rs
ms-term/tests/test/: helpers.rs
ms-tui/: Cargo.toml
ms-tui/src/: backend.rs  buffer.rs  lib.rs  style.rs  terminal.rs
ms-view/: Cargo.toml
ms-view/src/: command.rs  document.rs  editor.rs  lib.rs  mode.rs  register.rs  theme.rs  view.rs
