[package]
name = "ms-term"
version.workspace = true
edition.workspace = true

[lib]
name = "ms_term"
path = "src/lib.rs"

[[bin]]
name = "microscope"
path = "src/main.rs"

[dependencies]
ms-core.workspace = true
ms-view.workspace = true
ms-tui.workspace = true
crossterm.workspace = true
ropey.workspace = true
tokio.workspace = true
futures-core.workspace = true
tokio-stream.workspace = true

[features]
default = []
integration = []

[dev-dependencies]
indoc = "2"
tempfile = "3"
ms-core = { workspace = true }

[lints]
workspace = true
